--- a/deploy/all-in-one/docker-compose.yml
+++ b/deploy/all-in-one/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - openmu-startup
 
   openmu-startup:
-    image: munique/openmu
+    image: matiasbian/mu-dinakon:latest
     container_name: openmu-startup
     ports:
       - "8080"
